--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ body {
     color: #000000;
 }
 
+
 .active,
 .mainhome:hover,
 .right:hover {
@@ -132,6 +133,7 @@ h3 {
     font-family: "Montserrat", sans-serif;
 }
 
+/* as it was linked to another div, i had to make a seperate div to align the arros with the header*/
 .down-index {
     bottom: 20px;
     font-size: 100px;
@@ -196,7 +198,7 @@ h3 {
     padding: 10% 0% 6% 5%;
     font-size: 23px;
 }
-
+/* used to display none to hide the div */
 .left-travelhidden,
 .left-fitnesshidden {
     display: none;
@@ -266,6 +268,7 @@ arabic {
     margin: 0;
 }
 
+/*-- code taken from Rosie Resume from incoure projects*/
 .journey-item:before {
     content: attr(data-journeydates);
     position: absolute;
@@ -299,6 +302,7 @@ arabic {
 }
 
 /*------------------------------ Projects Page*/
+/*-- display */
 .card {
     border: 1px solid #000000;
     height: 425px;
@@ -374,7 +378,6 @@ arabic {
 .labelatt {
     font-weight: 600;
 }
-
 
 #submit {
     background-color: #4CAF50;
