upload of validation document
Added minor changes to the CSS file as well uploading a copy of one validation document

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ arabic {
     margin: 0;
 }
 
-/*-- code taken from Rosie Resume from incoure projects*/
+/*-- code taken from Rosie Resume from incourse projects*/
 .journey-item:before {
     content: attr(data-journeydates);
     position: absolute;
